# nk-lang-old

./: .clang-format  .gitmodules  CMakeLists.txt  CMakePresets.json
cmake/: compiler.cmake  output.cmake
include/: nkpch.h
include/core/: arr.h  assertion.h  defines.h  dyarr.h  enum.h  logging.h  macros.h  map_macro.h
include/memory/: allocator.h  malloc_allocator.h
include/parser/: lexer.h  report.h  token.h  token_keyword_map.h
src/: entry_point.cpp
src/core/: logging.cpp
src/memory/: allocator.cpp  malloc_allocator.cpp
src/parser/: lexer.cpp  report.cpp
